--- a/belatro-backend/build.gradle
+++ b/belatro-backend/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'io.github.cdimascio:dotenv-java:3.2.0'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
