--- a/belatro-backend/src/main/resources/application.properties
+++ b/belatro-backend/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=belatro
+spring.data.mongodb.uri=mongodb+srv://${MONGO_USERNAME}:${MONGO_PASSWORD}@belatrocluster.xmr3j.mongodb.net/belatro?retryWrites=true&w=majority&appName=BelatroCluster
