redis connect, started game logic

--- a/belatro-backend/src/main/resources/application.properties
+++ b/belatro-backend/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=belatro
 spring.data.mongodb.uri=mongodb+srv://${MONGO_USERNAME}:${MONGO_PASSWORD}@belatrocluster.xmr3j.mongodb.net/belatro?retryWrites=true&w=majority&appName=BelatroCluster
+spring.data.redis.host=${REDIS_LINK}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.ssl.enabled=false
+spring.data.redis.username=${REDIS_USER}
+spring.data.redis.password=${REDIS_PASS}
+logging.level.backend.belatro.configs.RedisConfig=DEBUG
