--- a/belatro-backend/build.gradle
+++ b/belatro-backend/build.gradle
@@ -26,9 +26,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework.session:spring-session-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	compileOnly 'org.projectlombok:lombok'
@@ -38,7 +39,10 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'io.github.cdimascio:dotenv-java:3.2.0'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
+	//json serialization
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'org.apache.commons:commons-pool2:2.11.1'
+	implementation 'io.lettuce:lettuce-core:6.5.5.RELEASE'}
 
 tasks.named('test') {
 	useJUnitPlatform()
