--- a/belatro-backend/src/main/resources/application.properties
+++ b/belatro-backend/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.data.redis.ssl.enabled=false
 spring.data.redis.username=${REDIS_USER}
 spring.data.redis.password=${REDIS_PASS}
 logging.level.backend.belatro.configs.RedisConfig=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework,messaging=DEBUG
