--- a/belatro-backend/build.gradle
+++ b/belatro-backend/build.gradle
@@ -48,6 +48,10 @@ dependencies {
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.4'
 
+	// JJWT: split API / Impl / Jackson binding
+	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
+	runtimeOnly    "io.jsonwebtoken:jjwt-impl:0.11.5"
+	runtimeOnly    "io.jsonwebtoken:jjwt-jackson:0.11.5"
 }
 
 tasks.named('test') {
