--- a/belatro-backend/build.gradle
+++ b/belatro-backend/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation "com.redis:testcontainers-redis:2.2.4"
 	testImplementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
+	runtimeOnly    "io.jsonwebtoken:jjwt-impl:0.11.5"
+	runtimeOnly    "io.jsonwebtoken:jjwt-jackson:0.11.5"
 }
 
 tasks.named('test') {
