--- a/belatro-backend/src/main/resources/application.properties
+++ b/belatro-backend/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.data.redis.password=${REDIS_PASS}
 logging.level.backend.belatro.configs.RedisConfig=DEBUG
 
 logging.level.org.springframework.web.socket=DEBUG
-logging.level.org.springframework,messaging=DEBUG
+logging.level.org.springframework.messaging=DEBUG
+
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=120
