--- a/belatro-frontend-web/package.json
+++ b/belatro-frontend-web/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "sockjs-client": "^1.6.1",
+    "web-vitals": "^2.1.4",
+    "webstomp-client": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
