--- a/belatro-backend/build.gradle
+++ b/belatro-backend/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 	runtimeOnly    "io.jsonwebtoken:jjwt-impl:0.11.5"
 	runtimeOnly    "io.jsonwebtoken:jjwt-jackson:0.11.5"
 	implementation 'org.springframework.boot:spring-boot-starter-aop:3.5.0'
+	testImplementation 'org.mockito:mockito-core:5.18.0'
 }
 
 tasks.named('test') {
