--- a/belatro-backend/src/main/resources/application.properties
+++ b/belatro-backend/src/main/resources/application.properties
@@ -14,6 +14,6 @@ jwt.expiration=120
 minio.endpoint=http://localhost:9000
 minio.accessKey=playa
 minio.secretKey=belaRocks123!
-minio.bucket=card-images
+minio.bucket=belatro-cards
 minio.region=us-east-1
 
