Introduce ranked matchmaking with ELO-based queue and matchmaking logic.
- Added `MatchmakingService` to handle player queueing, matchmaking, and team assignment.
- Implemented `RankedMatchmakingController` with REST endpoints for joining and leaving the queue.
- Created `MatchmakingQueueRepo` and `QueueCache` for queue state management and caching.
- Introduced `MatchmakingQueueEntry` model for queue entries with ELO and timestamp tracking.
- Enhanced `LobbyService` with ranked lobby creation support.
- Added integration and unit tests for matchmaking functionality, including ELO calculations and notifications.
- Introduced `UserRatingDto` and `MatchRatingUpdateDto` for managing player ranking updates.

--- a/belatro-backend/build.gradle
+++ b/belatro-backend/build.gradle
@@ -55,16 +55,19 @@ dependencies {
 	testImplementation "com.redis:testcontainers-redis:2.2.4"
 	testImplementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
-	runtimeOnly    "io.jsonwebtoken:jjwt-impl:0.11.5"
-	runtimeOnly    "io.jsonwebtoken:jjwt-jackson:0.11.5"
+	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
+	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
 	implementation 'org.springframework.boot:spring-boot-starter-aop:3.5.0'
 
 	testImplementation 'org.mockito:mockito-core:5.18.0'
 
 	implementation 'software.amazon.awssdk:s3:2.20.12'
 
-}
+	testImplementation("org.testcontainers:mongodb")
+	implementation("org.springframework.security:spring-security-messaging")
+	testImplementation("org.springframework.security:spring-security-messaging")
 
-tasks.named('test') {
-	useJUnitPlatform()
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
 }
