--- a/belatro-backend/src/main/resources/application.properties
+++ b/belatro-backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.data.redis.ssl.enabled=false
 spring.data.redis.username=${REDIS_USER}
 spring.data.redis.password=${REDIS_PASS}
 
-cors.allowedOrigins=${CORS_ALLOWEDORIGINS:http://localhost:3000,http://127.0.0.1:*}
+cors.allowedOrigins=${CORS_ALLOWEDORIGINS:http://localhost:3000,http://127.0.0.1:*,http://localhost:5173}
 logging.level.org.springframework.security=DEBUG
 jwt.secret=${JWT_SECRET}
 jwt.expiration=120
